[PROD-9145] fix: Activity modal with available space should not have a scrollbar in content area

--- a/src/bp-templates/bp-nouveau/readylaunch/css/main.css
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/main.css
@@ -15504,6 +15504,12 @@ body:not(.bb-is-mobile) .bb-rl-activity-list .acomment-display .ac-emotions_list
   flex-grow: 1;
 }
 
+@media screen and (min-height: 540px) {
+  .bb-rl-modal-activity-body {
+    min-height: 230px;
+  }
+}
+
 .bb-rl-modal-activity-header {
   display: flex;
   align-items: center;
